# formula

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json5.example  rust-toolchain
.github/workflows/: Build.yml  build.yml
migrations/2022-07-16-040711_erc165dto/: down.sql  up.sql
migrations/2022-07-19-145737_ercdto/: down.sql  up.sql
migrations/2022-07-22-101104_tokenid_to_string/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs
src/config/: error.rs  mod.rs
src/contracts/: ERC1155Contract.json  ERC165Contract.json  ERC721Contract.json  mod.rs
src/erc165/: cache_service.rs  erc165_interfaces.rs  errors.rs  mod.rs  model.rs  network_service.rs  service.rs
src/ethdto/: dto.rs  errors.rs  mod.rs  read_repo.rs  repo.rs  write_repo.rs
src/events/: errors.rs  mod.rs  transfer.rs  transfer_batch.rs  transfer_single.rs
src/listener/: errors.rs  ethnftid.rs  mod.rs  transfer.rs  transfer_batch.rs  transfer_single.rs  uri_getter.rs
src/server/: mod.rs
src/server/routers/: nfts.rs
src/uri_getter/: eth_uri_getter.rs  mod.rs
