[package]
name = "formula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13.3", features = ["json5"] }
ethers = { version = "2.0.7", features = ["ws", "rustls", "abigen-offline"] }
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-futures = "0.2.5"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.26"
error-stack = "0.3.1"
axum = { version = "0.6.18", features = ["tracing"] }
