[package]
name = "formula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
config = { version = "0.14.0", features = ["json5"] }
ethers = { version = "2.0.14", features = ["ws", "rustls", "abigen-offline"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-futures = "0.2.5"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.35"
error-stack = "0.4.1"
axum = { version = "0.7.4", features = ["tracing"] }
